netpol/pod1.yaml
apiVersion: v1
kind: Service
metadata:
  name: p1-svc
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - nginx
          - nginx1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-cont
          image: nginx:1.17
---
