netpol/pod2.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2-svc
  labels:
    app: MySQL
spec:
  type: NodePort
  selector:
    app: MySQL
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    app: MySQL
spec:
  replicas: 2
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - MySQL
          - mysql
  template:
    metadata:
      labels:
        app: MySQL
    spec:
      containers:
        - name: mysql-cont
          image: mysql:latest
---
