netpol/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-netpol
  labels:
    netpol-between: nginx-mysql
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - nginx
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: MySQL
